# ynabifier

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: push.yml
src/: config.rs  email.rs  fetch.rs  inbox.rs  lib.rs  main.rs  parse.rs  task.rs  testutil.rs  ynab.rs
src/config/: build.rs
src/email/: inbox.rs  login.rs  message.rs
src/email/inbox/: idle.rs  reconnect.rs
src/email/inbox/idle/: state.rs  traits.rs
src/inbox/: idle.rs
src/parse/: citi.rs  td.rs
src/parse/testdata/citi/: citi.eml  wrong_sender.eml
src/parse/testdata/td/: td.eml  wrong_sender.eml
src/task/: cancel.rs  interrupt.rs  multi.rs  register.rs  stop.rs
