[package]
name = "ynabifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.24"
derive-getters = "0.2.0"
async-imap = "0.6.0"
mailparse = "0.13.8"
tokio = { version = "1.18", features = ["full"] }
thiserror = "1.0"
log = "0.4.17"
simplelog = "0.12.0"
async-trait = "0.1.53"
scraper = "0.13.0"
itertools = "0.10.4"

# For annoying reasons, we must pin exactly the same versions as async-imap if we want to use
# their types.
# https://github.com/async-email/async-imap/pull/57
futures = "0.3.15"
async-native-tls = { version = "0.4" }
async-std = { version = "1.8.0" }
stop-token = "0.7"

[dev-dependencies]
textwrap = "0.15.0"
futures-timer = "3.0"
