[package]
name = "ynabifier"
version = "0.1.0"
edition = "2021"
ynabifier = "Imports transactions to YNAB from bank emails"
license = "Apache-2.0"
repository = "https://github.com/ollien/ynabifier"
homepage = "https://github.com/ollien/ynabifier"
default-run = "ynabifier"

[dependencies]
anyhow = "1.0"
async-imap = "0.6.0"
async-trait = "0.1.53"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
chrono = "0.4.22"
derive-getters = "0.2.0"
log = "0.4.17"
fern = "0.6.1"
itertools = "0.10.4"
mailparse = "0.13.8"
scraper = "0.13.0"
regex = "1.6"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "1.0"
simplelog = "0.12.0"
text_io = "0.1.12"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.18", features = ["full"] }
url = "2.2"
uuid = { version = "1.2", features = ["v4"] }

# For annoying reasons, we must pin exactly the same versions as async-imap if we want to use
# their types.
# https://github.com/async-email/async-imap/pull/57
async-native-tls = { version = "0.4" }
async-std = { version = "1.8.0" }
stop-token = "0.7"

# Ideally futures should also be one of these, but the version in async-imap does not compile in release mode,
# so we must change it up a bit
futures = "0.3.24"

[dev-dependencies]
textwrap = "0.15.0"
test-case = "2.2"
